api/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-canvas-service
spec:
  selector:
    app.kubernetes.io/name: kubernetes-canvas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
